--- a/static/manifest.json
+++ b/static/manifest.json
@@ -5,17 +5,17 @@
   "start_url": "/?from=homescreen",
   "icons": [
     {
-      "src": "images/touch/homescreen48.png",
+      "src": "./images/homescreen48.png",
       "sizes": "48x48",
       "type": "image/png"
     },
     {
-      "src": "images/touch/homescreen96.png",
+      "src": "./images/homescreen96.png",
       "sizes": "96x96",
       "type": "image/png"
     },
     {
-      "src": "images/touch/homescreen144.png",
+      "src": "./images/homescreen144.png",
       "sizes": "144x144",
       "type": "image/png"
     }
